build: change before deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: 'node_js'
 node_js: '10'
 
 before_script:
-  - yarn build-storybook
+  - npm run test
+  - npm run build-storybook
 
 deploy:
   provider: pages
